Fixes to config and structure Thanks to DU-Wolfram  and DU-Tobitege in getting this thing to compile.

--- a/.luarc.json
+++ b/.luarc.json
@@ -25,7 +25,7 @@
     "completion.autoRequire": false,
     "workspace": {
         "library": [
-          "./lua"
+          "./lua", "./util", "./util/dumocks"
         ]
     },
     "runtime.version": "Lua 5.2"
